[gd_scene load_steps=13 format=2]

[ext_resource path="res://plant/Plant.gd" type="Script" id=1]
[ext_resource path="res://plant/PlantMesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sfx/plant/retro_coin_02.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/font/rainyhearts.ttf" type="DynamicFontData" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
albedo_color = Color( 0.117647, 0.807843, 0.776471, 1 )
metallic = 0.55
roughness = 0.62
emission_enabled = true
emission = Color( 0.072, 0.9, 0.9, 1 )
emission_energy = 1.6
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Animation" id=4]
resource_name = "pulse"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody/MeshInstance:material/0:emission_energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.6, 1.0, 1.6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody/MeshInstance:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.2, 1.2, 1.2 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.0431373, 0.00392157, 0.0784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=26]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=27]
resource_name = "pulse"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Plant" type="StaticBody" groups=[
"plant",
]]
collision_layer = 65
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.334747, 4.92475, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CubePulse" type="AnimationPlayer" parent="."]
anims/pulse = SubResource( 4 )

[node name="PlantMesh" parent="." instance=ExtResource( 2 )]

[node name="HarvestSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
anims/death = SubResource( 24 )

[node name="Panel" type="Panel" parent="."]
margin_right = 129.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 63.5019, 13.3448 )
custom_styles/panel = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.3536
margin_top = -8.98959
margin_right = 59.6464
margin_bottom = 8.01041
size_flags_vertical = 5
custom_fonts/normal_font = SubResource( 26 )
text = "[Space] to harvest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
autoplay = "pulse"
anims/pulse = SubResource( 27 )

[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_DeathAnimation_animation_finished"]
